--- a/client/index.html
+++ b/client/index.html
@@ -110,14 +110,10 @@
     <!-- Widget -->
 
     <!-- beerCounter -->
-    <!-- <script type="text/javascript" src="components/beerCounter/dist/adf-widget-beerCounter.js"></script> -->
+
     <script type="text/javascript" src="components/chart.js/dist/Chart.min.js"></script>
     <script type="text/javascript" src="components/angular-chart.js/dist/angular-chart.min.js"></script>
-    <script type="text/javascript" src="/widgets/beerCounter/src/beerCounter.widget.js"></script>
-    <script type="text/javascript" src="/widgets/beerCounter/templates.tpl.js"></script>
-    <script type="text/javascript" src="/widgets/beerCounter/src/beerCounter.service.js"></script>
-    <script type="text/javascript" src="/widgets/beerCounter/src/view/beerController.js"></script>
-    <script type="text/javascript" src="/widgets/beerCounter/src/edit/beerEditController.js"></script>
+    <script type="text/javascript" src="widgets/beerCounter/dist/adf-widget-beerCounter.js"></script>
 
     <!-- singleValue -->
     <script type="text/javascript" src="/widgets/singleValue/src/singleValue.widget.js"></script>
@@ -125,6 +121,16 @@
     <script type="text/javascript" src="/widgets/singleValue/src/singleValue.service.js"></script>
     <script type="text/javascript" src="/widgets/singleValue/src/view/singleValue.controller.js"></script>
     <script type="text/javascript" src="/widgets/singleValue/src/edit/singleValueEdit.controller.js"></script>
+
+    <!-- pieChart -->
+    <script type="text/javascript" src="/widgets/pieChart/dist/adf-widget-pieChart.min.js"></script>
+
+    <!-- lineChart -->
+    <script type="text/javascript" src="/widgets/lineChart/dist/adf-widget-lineChart.min.js"></script>
+
+    <!-- Check Value -->
+    <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkValue.min.js"></script>
+
 
     <!-- Markdown -->
     <script type="text/javascript" src="components/showdown/src/showdown.js"></script>
