--- a/client/widgets/singleValue/src/edit/edit.html
+++ b/client/widgets/singleValue/src/edit/edit.html
@@ -3,12 +3,18 @@
     <label for="sample">URL</label>
     <input type="text" class="form-control" ng-model="config.url" placeholder="Enter url">
   </div>
+
+  <div>
+    <label> Principal Data </label>
+  </div>
+
   <div class="form-inline padding-bottom">
     <div class="form-group">
-      <input type="text" class="form-control" ng-model="config.desc" placeholder="Enter Description of the data">
+      <label class="sr-only" for="desc">Description</label>
+      <input type="text" id="desc" class="form-control" ng-model="config.desc" placeholder="Enter Description of the data">
     </div>
     <div class="form-group">
-      <label for="sample">Principal Data</label>
+      <label class="sr-only" for="sample">Principal Data</label>
       <input type="text" class="form-control" ng-model="config.root" placeholder="Enter name of principal data">
     </div>
   </div>
