--- a/client/index.html
+++ b/client/index.html
@@ -119,10 +119,15 @@
     <script type="text/javascript" src="/components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script type="text/javascript" src="/components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="/components/angular-dashboard-framework/dist/angular-dashboard-framework-tpls.min.js"></script>
+    <script type="text/javascript" src="components/chart.js/dist/Chart.min.js"></script>
+    <script type="text/javascript" src="components/angular-chart.js/dist/angular-chart.min.js"></script>
 
     <!-- scripts -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/config/structure.js"></script>
+    <script type="text/javascript" src="js/config/chart.js"></script>
+
+
     <script type="text/javascript" src="js/controller/controller.js"></script>
     <script type="text/javascript" src="js/controller/authentication.controller.js"></script>
     <script type="text/javascript" src="js/controller/testCtrl.js"></script>
@@ -136,6 +141,9 @@
 
     <script type="text/javascript" src="js/interceptor/authInterceptor.js"></script>
 
+    <script type="text/javascript" src="js/directive/accessLevel.js"></script>
+
+
 
 
     <!-- structures -->
@@ -144,9 +152,6 @@
     <!-- Widget -->
 
     <!-- beerCounter -->
-
-    <script type="text/javascript" src="components/chart.js/dist/Chart.min.js"></script>
-    <script type="text/javascript" src="components/angular-chart.js/dist/angular-chart.min.js"></script>
     <script type="text/javascript" src="widgets/beerCounter/dist/adf-widget-beerCounter.js"></script>
 
     <!-- singleValue -->
