--- a/client/widgets/pieChart/src/edit/edit.html
+++ b/client/widgets/pieChart/src/edit/edit.html
@@ -45,6 +45,19 @@
   </div>
 
   <div>
+    <label ng-click="isCollapsed = !isCollapsed"> Chart Option
+      <span ng-hide="isCollapsed" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+      <span ng-show="isCollapsed" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+    </label>
+  </div>
+
+  <div ng-show="isCollapsed">
+    <div>
+      <label> Ok </label>
+    </div>
+  </div>
+
+  <div>
     <input type="checkbox" ng-model="expert"> Expert Mode
   </div>
 
