add widget paginateTable

--- a/client/index.html
+++ b/client/index.html
@@ -171,6 +171,8 @@
     <!-- Check Value -->
     <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkValue.min.js"></script>
 
+    <script type="text/javascript" src="/widgets/adf-widget-paginateTable.min.js"></script>
+
 
     <!-- Markdown -->
     <script type="text/javascript" src="components/showdown/src/showdown.js"></script>
