--- a/client/widgets/paginateTable/src/edit/edit.html
+++ b/client/widgets/paginateTable/src/edit/edit.html
@@ -1,7 +1,7 @@
 <form role="form">
   <div class="form-group">
     <label for="sample">URL</label>
-    <input type="text" class="form-control" ng-model="config.url" placeholder="Enter url">
+    <input type="text" class="form-control" ng-model="config.url" placeholder="Enter url" uib-typeahead="address for address in getAutocompletion($viewValue)" typeahead-loading="load" typeahead-no-result="noResults>
   </div>
   <div class="form-group">
     <label for="sample">Root element</label>
