--- a/client/index.html
+++ b/client/index.html
@@ -46,71 +46,14 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container" ng-controller="navigationCtrl as nav">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" ng-click="nav.toggleNav()">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Accueil <i class="fa fa-beer fa-lg" aria-hidden="true" ></i></a>
-        </div>
-        <div uib-collapse="nav.navCollapsed" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="#/boards/_commun">Info Commune</a>
-            </li>
-
-            <li uib-dropdown on-toggle="toggled(open)">
-              <a href id="windows" uib-dropdown-toggle>
-                Windows <i class="fa fa-windows fa-lg" aria-hidden="true"></i>
-              </a>
-              <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="windows">
-
-                <li ng-class="nav.navClass('boards/' + item.id)" ng-repeat="item in nav.items | orderBy: title" ng-if="item.id.indexOf('_wds') == 0">
-                  <a ng-href="#/boards/{{item.id}}">{{item.title}}</a>
-                </li>
-                <li>
-                  <a style="cursor: pointer;" ng-click="nav.create('wds')">Create</a>
-                </li>
-              </ul>
-            </li>
-            <li uib-dropdown on-toggle="toggled(open)">
-              <a href id="unix" uib-dropdown-toggle>
-                Unix <i class="fa fa-linux fa-lg" aria-hidden="true"></i>
-              </a>
-              <ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="unix">
-                <li ng-class="nav.navClass('boards/' + item.id)" ng-repeat="item in nav.items | orderBy: title" ng-if="item.id.indexOf('_unix') == 0">
-                  <a ng-href="#/boards/{{item.id}}">{{item.title}}</a>
-                </li>
-                <li>
-                  <a style="cursor: pointer;" ng-click="nav.create('unix')">Create</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a style="cursor: pointer;" ng-click="nav.create()">Create</a>
-            </li>
-            <li>
-              <a href="#/boards/_documentation">Documentation</a>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right" ng-controller="timeController as clock">
-            <li>
-              <a href="#"> {{clock.time}} </a>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+    <div ng-include="'/templates/navigation.html'"></div>
 
     <div class="container">
 
       <ng-view />
 
     </div>
+    <p class="text-center"> Version Beta 0.1.2 </p>
 
     <!-- components -->
     <script type="text/javascript" src="/components/Sortable/Sortable.min.js"></script>
@@ -171,7 +114,7 @@
     <!-- Check Value -->
     <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkValue.min.js"></script>
 
-    <script type="text/javascript" src="/widgets/adf-widget-paginateTable.min.js"></script>
+    <script type="text/javascript" src="/widgets/paginateTable/dist/adf-widget-paginateTable.min.js"></script>
 
 
     <!-- Markdown -->
