--- a/client/widgets/checkValue/src/edit/edit.html
+++ b/client/widgets/checkValue/src/edit/edit.html
@@ -56,43 +56,85 @@
       <label class="sr-only" for ="test"> Value </label>
       <input type="text" id="test" class="form-control" placeholder="Test Value" ng-model="config.test" required="">
     </div>
+  </div>
+  <div class="form-group">
+    <label ng-click="isCollapsed = !isCollapsed"> Paramètre Modal
+      <span ng-hide="isCollapsed" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+      <span ng-show="isCollapsed" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+    </label>
+  </div>
+  <div ng-show="isCollapsed">
 
-    <div class="form-group">
-      <label ng-click="isCollapsed = !isCollapsed"> Paramètre Modal
-        <span ng-hide="isCollapsed" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
-        <span ng-show="isCollapsed" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
-      </label>
-    </div>
+      <div >
+        <label for="sample">Modal URL</label>
+        <input type="text" class="form-control" ng-model="config.modalUrl" placeholder="Modal Url" uib-typeahead="address.url as address.url for address in getAutocompletion($viewValue) " typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
+      </div>
+
+      <div>
+        <label>Column</label>
+      </div>
+
+      <div class="form-inline padding-bottom" ng-repeat="col in cv.config.columns">
+        <div class="form-group">
+          <label class="sr-only" for="title-{{$index}}">Title</label>
+          <input type="text" id="title-{{$index}}" class="form-control" placeholder="Title" ng-model="col.title" required="">
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="path-{{$index}}">Path</label>
+          <input type="text" id="path-{{$index}}" class="form-control" placeholder="Path" ng-model="col.path" required="">
+        </div>
+        <button type="button" class="btn btn-warning" ng-click="cv.removeColumn($index)">
+          <i class="fa fa-minus"></i> Remove
+        </button>
+      </div>
+
+      <button type="button" class="btn btn-primary" ng-click="cv.addColumn()">
+        <i class="fa fa-plus"></i> Add
+      </button>
   </div>
 
-    <div ng-show="isCollapsed">
+  <div class="form-group">
+    <label ng-click="isCollapsed2 = !isCollapsed2"> Données Aditionnel
+      <span ng-hide="isCollapsed2" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+      <span ng-show="isCollapsed2" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+    </label>
+  </div>
+</div>
 
-        <div >
-          <label for="sample">Root element</label>
-          <input type="text" class="form-control" ng-model="config.rootData" placeholder="Enter name of root element">
-        </div>
+<div ng-show="isCollapsed2">
 
-        <div>
-          <label>Column</label>
-        </div>
-
-        <div class="form-inline padding-bottom" ng-repeat="col in cv.config.columns">
-          <div class="form-group">
-            <label class="sr-only" for="title-{{$index}}">Title</label>
-            <input type="text" id="title-{{$index}}" class="form-control" placeholder="Title" ng-model="col.title" required="">
-          </div>
-          <div class="form-group">
-            <label class="sr-only" for="path-{{$index}}">Path</label>
-            <input type="text" id="path-{{$index}}" class="form-control" placeholder="Path" ng-model="col.path" required="">
-          </div>
-          <button type="button" class="btn btn-warning" ng-click="cv.removeColumn($index)">
-            <i class="fa fa-minus"></i> Remove
-          </button>
-        </div>
-
-        <button type="button" class="btn btn-primary" ng-click="cv.addColumn()">
-          <i class="fa fa-plus"></i> Add
-        </button>
+    <div class="form-inline padding-bottom">
+      <div >
+        <label class="sr-only"> Description donnée principak</label>
+        <input type="text" class="form-control" ng-model="config.descPrincipalData" placeholder="Donnée Principale">
+      </div>
+      <div >
+        <label class="sr-only"> Donnée Principal</label>
+        <input type="text" class="form-control" ng-model="config.rootData" placeholder="Donnée Principale">
+      </div>
     </div>
+
+    <div>
+      <label>Column</label>
+    </div>
+
+    <div class="form-inline padding-bottom" ng-repeat="col in cv.config.additionalData">
+      <div class="form-group">
+        <label class="sr-only" for="title-{{$index}}">Title</label>
+        <input type="text" id="title-{{$index}}" class="form-control" placeholder="Title" ng-model="col.title" required="">
+      </div>
+      <div class="form-group">
+        <label class="sr-only" for="path-{{$index}}">Path</label>
+        <input type="text" id="path-{{$index}}" class="form-control" placeholder="Path" ng-model="col.path" required="">
+      </div>
+      <button type="button" class="btn btn-warning" ng-click="cv.removeColumn($index)">
+        <i class="fa fa-minus"></i> Remove
+      </button>
+    </div>
+
+    <button type="button" class="btn btn-primary" ng-click="cv.addColumn()">
+      <i class="fa fa-plus"></i> Add
+    </button>
+</div>
 
 </form>
