--- a/client/index.html
+++ b/client/index.html
@@ -44,7 +44,7 @@
 
   </head>
 
-  <body>
+  <body ng-controller="authenticationCtrl as auth">
 
     <div ng-include="'/templates/navigation.html'"></div>
 
@@ -112,7 +112,7 @@
     <script type="text/javascript" src="/widgets/lineChart/dist/adf-widget-lineChart.min.js"></script>
 
     <!-- Check Value -->
-    <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkValue.min.js"></script>
+    <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkValue.js"></script>
 
     <script type="text/javascript" src="/widgets/paginateTable/dist/adf-widget-paginateTable.min.js"></script>
 
