--- a/client/widgets/paginateTable/src/edit/edit.html
+++ b/client/widgets/paginateTable/src/edit/edit.html
@@ -10,13 +10,8 @@
 
 <form role="form">
   <div class="form-group">
-    <label for="sample">URL</label>
-    <input type="text" class="form-control" ng-model="config.url" placeholder="Enter url" uib-typeahead="address as address.url for address in getAutocompletion($viewValue)" typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
-  </div>
-
-  <div class="form-group">
-    <label for="sample">Root element</label>
-    <input type="text" class="form-control" ng-model="config.root" placeholder="Enter name of root element">
+    <label for="sample">Datasource</label>
+    <input type="text" class="form-control" ng-model="config.url" placeholder="Enter url" uib-typeahead="address.url as address.url for address in getAutocompletion($viewValue)" typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
   </div>
 
   <div>
@@ -48,6 +43,52 @@
   <div class="form-group">
     <label class="sr-only" for="maxSize"> Item par Page </label>
     <input type="text" id="maxSize" class="form-control" placeholder="Item Per Page" ng-model="config.itemPerPage">
+  </div>
+
+  <div ng-show="isCollapsed">
+
+      <div >
+        <label for="sample">Modal URL</label>
+        <input type="text" class="form-control" ng-model="config.modalUrl" placeholder="Modal Url" uib-typeahead="address.url as address.url for address in getAutocompletion($viewValue) " typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
+      </div>
+
+      <div>
+        <label>Column</label>
+      </div>
+
+      <div class="form-inline padding-bottom" ng-repeat="col in cv.config.columns">
+        <div class="form-group">
+          <label class="sr-only" for="title-{{$index}}">Title</label>
+          <input type="text" id="title-{{$index}}" class="form-control" placeholder="Title" ng-model="col.title" required="">
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="path-{{$index}}">Path</label>
+          <input type="text" id="path-{{$index}}" class="form-control" placeholder="Path" ng-model="col.path" required="">
+        </div>
+        <button type="button" class="btn btn-warning" ng-click="cv.removeColumn($index)">
+          <i class="fa fa-minus"></i> Remove
+        </button>
+      </div>
+
+      <button type="button" class="btn btn-primary" ng-click="cv.addColumn()">
+        <i class="fa fa-plus"></i> Add
+      </button>
+  </div>
+
+
+  <div>
+    <input type="checkbox" ng-model="expert"> Expert Mode
+  </div>
+
+  <div ng-show="expert">
+    <div class="form-group">
+      <label class="sr-only" for="database"> Database </label>
+      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database">
+    </div>
+    <div class="form-group">
+      <label class="sr-only" for="query">Query</label>
+      <textarea rows="3" id="query" class="form-control" placeholder="Query" ng-model="config.expert"></textarea>
+    </div>
   </div>
 
 </form>
