modif template nav

--- a/client/index.html
+++ b/client/index.html
@@ -81,6 +81,7 @@
     <script type="text/javascript" src="js/service/storeService.js"></script>
     <script type="text/javascript" src="js/service/session.js"></script>
     <script type="text/javascript" src="js/service/authentication.service.js"></script>
+    <script type="text/javascript" src="js/service/utils.js"></script>
 
     <script type="text/javascript" src="js/interceptor/authInterceptor.js"></script>
 
