--- a/client/widgets/paginateTable/src/edit/edit.html
+++ b/client/widgets/paginateTable/src/edit/edit.html
@@ -27,12 +27,12 @@
       <label class="sr-only" for="path-{{$index}}">Path</label>
       <input type="text" id="path-{{$index}}" class="form-control" placeholder="Path" ng-model="col.path" required="">
     </div>
-    <button type="button" class="btn btn-warning" ng-click="pt.removeColumn($index)">
+    <button type="button" class="btn btn-warning" ng-click="pt.removeColumn(false, $index)">
       <i class="fa fa-minus"></i> Remove
     </button>
   </div>
 
-  <button type="button" class="btn btn-primary" ng-click="pt.addColumn()">
+  <button type="button" class="btn btn-primary" ng-click="pt.addColumn(false)">
     <i class="fa fa-plus"></i> Add
   </button>
 
@@ -41,8 +41,17 @@
   </div>
 
   <div class="form-group">
-    <label class="sr-only" for="maxSize"> Item par Page </label>
+    <label class="sr-only" for="maxSize"> Nombre d'Elément par Page </label>
     <input type="text" id="maxSize" class="form-control" placeholder="Item Per Page" ng-model="config.itemPerPage">
+  </div>
+
+<!-- MODAL -->
+
+  <div class="form-group">
+    <label ng-click="isCollapsed = !isCollapsed"> Paramètre Modal
+      <span ng-hide="isCollapsed" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+      <span ng-show="isCollapsed" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+    </label>
   </div>
 
   <div ng-show="isCollapsed">
@@ -53,24 +62,29 @@
       </div>
 
       <div>
+        <label for="field"> Column to populate </label>
+        <select id="field" ng-options="pt.config.columns.indexOf(col) as col.title for col in pt.config.columns" ng-model="pt.config.modalField"></select>
+      </div>
+
+      <div>
         <label>Column</label>
       </div>
 
-      <div class="form-inline padding-bottom" ng-repeat="col in cv.config.columns">
+      <div class="form-inline padding-bottom" ng-repeat="modalCol in pt.config.modalColumns">
         <div class="form-group">
-          <label class="sr-only" for="title-{{$index}}">Title</label>
-          <input type="text" id="title-{{$index}}" class="form-control" placeholder="Title" ng-model="col.title" required="">
+          <label class="sr-only" for="modalTitle-{{$index}}">Title</label>
+          <input type="text" id="modalTitle-{{$index}}" class="form-control" placeholder="Title" ng-model="modalCol.title" required="">
         </div>
         <div class="form-group">
-          <label class="sr-only" for="path-{{$index}}">Path</label>
-          <input type="text" id="path-{{$index}}" class="form-control" placeholder="Path" ng-model="col.path" required="">
+          <label class="sr-only" for="modalPath-{{$index}}">Path</label>
+          <input type="text" id="modalPath-{{$index}}" class="form-control" placeholder="Path" ng-model="modalCol.path" required="">
         </div>
-        <button type="button" class="btn btn-warning" ng-click="cv.removeColumn($index)">
+        <button type="button" class="btn btn-warning" ng-click="pt.removeColumn(true, $index)">
           <i class="fa fa-minus"></i> Remove
         </button>
       </div>
 
-      <button type="button" class="btn btn-primary" ng-click="cv.addColumn()">
+      <button type="button" class="btn btn-primary" ng-click="pt.addColumn(true)">
         <i class="fa fa-plus"></i> Add
       </button>
   </div>
