New widget checkStandard

--- a/client/index.html
+++ b/client/index.html
@@ -113,7 +113,10 @@
     <script type="text/javascript" src="/widgets/lineChart/dist/adf-widget-lineChart.min.js"></script>
 
     <!-- Check Value -->
-    <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkValue.js"></script>
+    <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkValue.min.js"></script>
+
+    <!-- Check Standard -->
+    <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkStandard.min.js"></script>
 
     <script type="text/javascript" src="/widgets/paginateTable/dist/adf-widget-paginateTable.min.js"></script>
 
