--- a/client/widgets/checkStandard/src/edit/edit.html
+++ b/client/widgets/checkStandard/src/edit/edit.html
@@ -14,17 +14,52 @@
 <form role="form">
 
   <div class="form-group">
-    <label for="sample"> Liste des Datasources</label>
-    <input id="sample" type="text" class="form-control" ng-model="config.database" placeholder="Type du Check" uib-typeahead="database for database in cs.getDatabase($viewValue) " ng-blur="cs.getColumns(config.database)">
+    <label for="sample"> Datasources</label>
+    <input id="sample" type="text" class="form-control" ng-model="config.database" placeholder="Type du Check" uib-typeahead="database for database in cs.getDatabase($viewValue)" typeahead-min-length='0' ng-blur="cs.getColumns(config.database)">
   </div>
 
 
   <div class="form-group">
     <label for="standardTest"> Test </label>
-    <select class="form-control">
-      <option> </option>
-    </select>
   </div>
+
+  <div class="form-inline padding-bottom" ng-repeat="t in cs.config.test">
+    <!-- <div class="form-group">
+      <label class="sr-only" for="andor-{{$index}}"> And Or </label>
+      <select class="form-control" ng-model="t.opBool" id="andor-{{$index}}">
+        <option value="and"> AND </option>
+        <option value="or"> OR </option>
+      </select>
+    </div> -->
+    <div class="form-group">
+      <label class="sr-only" for="column-{{$index}}"> Column </label>
+      <select class="form-control" ng-model="t.column" id="column-{{$index}}">
+        <option ng-repeat="column in config.colDatabase" value="{{column.Field}}"> {{column.Field}} </option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label class="sr-only" for="test-{{$index}}"> Test </label>
+      <select ng-model="t.test" class="form-control" id="test-{{$index}}">
+        <option value="="> Egal </option>
+        <option value="<>"> Different </option>
+        <option value=">"> Superieur </option>
+        <option value="<"> Inferieur </option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label class="sr-only" for="value-{{$index}}"> Value </label>
+      <input type="text" class="form-control" id="value-{{$index}}" placeholder="Value" ng-model="t.value">
+    </div>
+    <button type="button" class="btn btn-warning" ng-click="cs.removeColumn(true, $index)">
+      <i class="fa fa-minus"></i> Remove
+    </button>
+  </div>
+
+  <button type="button" class="btn btn-primary" ng-click="cs.addColumn(true)">
+    <i class="fa fa-plus"></i> Add
+  </button>
+
+  <input type="checkbox" ng-model="config.positif"> <label> Positif </label>
 
   <div class="form-group">
     <label ng-click="isCollapsed = !isCollapsed"> Paramètre Modal
@@ -34,11 +69,6 @@
   </div>
 
   <div ng-show="isCollapsed">
-
-      <div >
-        <label for="sample">Modal URL</label>
-        <input type="text" class="form-control" ng-model="config.modalUrl" placeholder="Modal Url" uib-typeahead="address.url as address.url for address in getAutocompletion($viewValue) " typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
-      </div>
 
       <div>
         <label>Column</label>
