--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link href="css/app.css" rel="stylesheet"> -->
-
+      <link href="css/carousel.css" rel="stylesheet">
     <!-- dashboard style -->
     <link href="/components/angular-dashboard-framework/dist/angular-dashboard-framework.css" rel="stylesheet">
     <link href="/components/adf-widget-clock/dist/adf-widget-clock.min.css" rel="stylesheet">
@@ -116,7 +116,7 @@
     <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkValue.min.js"></script>
 
     <!-- Check Standard -->
-    <script type="text/javascript" src="/widgets/checkValue/dist/adf-widget-checkStandard.min.js"></script>
+    <script type="text/javascript" src="/widgets/checkStandard/dist/adf-widget-checkStandard.js"></script>
 
     <script type="text/javascript" src="/widgets/paginateTable/dist/adf-widget-paginateTable.min.js"></script>
 
