ajout event checkstandard

--- a/client/widgets/checkStandard/src/edit/edit.html
+++ b/client/widgets/checkStandard/src/edit/edit.html
@@ -93,6 +93,10 @@
       </button>
   </div>
 
+
+  <!-- MASTER WIDGET LISTENER -->
+  <button type="button" ng-click="cs.broadcast()"></button>
+
   <!-- MODE EXPERT -->
 
   <div>
