Master widget mode ON

--- a/client/widgets/paginateTable/src/edit/edit.html
+++ b/client/widgets/paginateTable/src/edit/edit.html
@@ -6,7 +6,7 @@
   </a>
 </script>
 
-
+<input type="checkbox" ng-model="config.master"> <label> Master </label>
 
 <form role="form">
   <div class="form-group">
