--- a/client/widgets/checkStandard/src/edit/edit.html
+++ b/client/widgets/checkStandard/src/edit/edit.html
@@ -8,7 +8,7 @@
 
 <div class="form-group">
   <label for="tooltip">Description</label>
-  <input id="tooltip" type="text" class="form-control" ng-model="config.tooltip" placeholder="Tooltips">
+  <input id="tooltip" type="text" class="form-control" ng-model="config.tooltip" placeholder="Entrer une description du check">
 </div>
 
 <form role="form">
@@ -17,7 +17,7 @@
     <label for="sample"> Datasources</label>
     <input id="sample" type="text" class="form-control" ng-model="config.database" placeholder="Type du Check" uib-typeahead="database for database in cs.getDatabase($viewValue)" typeahead-min-length='0' ng-blur="cs.getColumns(config.database)">
   </div>
-
+  <query-builder ng-if="config.colDatabase" group="config.condition.group" fields="config.colDatabase"></query-builder>
 
   <div class="form-group">
     <label for="standardTest"> Test </label>
@@ -62,13 +62,15 @@
   <input type="checkbox" ng-model="config.positif"> <label> Positif </label>
 
   <div class="form-group">
-    <label ng-click="isCollapsed = !isCollapsed"> Paramètre Modal
+    <label ng-click="isCollapsed = !isCollapsed"> Paramètre Tableau
       <span ng-hide="isCollapsed" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
       <span ng-show="isCollapsed" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
     </label>
   </div>
 
   <div ng-show="isCollapsed">
+
+    <p> Ce tableau s'affiche lorsque vous cliquer sur le widget, la première configuration est automatique </p>
 
       <div>
         <label>Column</label>
@@ -92,10 +94,6 @@
         <i class="fa fa-plus"></i> Add
       </button>
   </div>
-
-
-  <!-- MASTER WIDGET LISTENER -->
-  <button type="button" ng-click="cs.broadcast()"></button>
 
   <!-- MODE EXPERT -->
 
