--- a/client/widgets/checkStandard/src/edit/edit.html
+++ b/client/widgets/checkStandard/src/edit/edit.html
@@ -15,51 +15,26 @@
 
   <div class="form-group">
     <label for="sample"> Datasources</label>
-    <input id="sample" type="text" class="form-control" ng-model="config.database" placeholder="Type du Check" uib-typeahead="database for database in cs.getDatabase($viewValue)" typeahead-min-length='0' ng-blur="cs.getColumns(config.database)">
+    <input id="sample" type="text" class="form-control" ng-model="config.database" placeholder="Type du Check" autocomplete="off" uib-typeahead="database for database in cs.getDatabase($viewValue)" typeahead-min-length='0' ng-blur="cs.getColumns(config.database)">
   </div>
-  <query-builder ng-if="config.colDatabase" group="config.condition.group" fields="config.colDatabase"></query-builder>
 
   <div class="form-group">
     <label for="standardTest"> Test </label>
   </div>
 
-  <div class="form-inline padding-bottom" ng-repeat="t in cs.config.test">
-    <!-- <div class="form-group">
-      <label class="sr-only" for="andor-{{$index}}"> And Or </label>
-      <select class="form-control" ng-model="t.opBool" id="andor-{{$index}}">
-        <option value="and"> AND </option>
-        <option value="or"> OR </option>
-      </select>
-    </div> -->
-    <div class="form-group">
-      <label class="sr-only" for="column-{{$index}}"> Column </label>
-      <select class="form-control" ng-model="t.column" id="column-{{$index}}">
-        <option ng-repeat="column in config.colDatabase" value="{{column.Field}}"> {{column.Field}} </option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label class="sr-only" for="test-{{$index}}"> Test </label>
-      <select ng-model="t.test" class="form-control" id="test-{{$index}}">
-        <option value="="> Egal </option>
-        <option value="<>"> Different </option>
-        <option value=">"> Superieur </option>
-        <option value="<"> Inferieur </option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label class="sr-only" for="value-{{$index}}"> Value </label>
-      <input type="text" class="form-control" id="value-{{$index}}" placeholder="Value" ng-model="t.value">
-    </div>
-    <button type="button" class="btn btn-warning" ng-click="cs.removeColumn(true, $index)">
-      <i class="fa fa-minus"></i> Remove
-    </button>
+  <query-builder ng-if="config.colDatabase" group="config.condition.group" fields="config.colDatabase"></query-builder>
+
+  <div class=form-group>
+    <label> Seuil </label>
   </div>
 
-  <button type="button" class="btn btn-primary" ng-click="cs.addColumn(true)">
-    <i class="fa fa-plus"></i> Add
-  </button>
-
-  <input type="checkbox" ng-model="config.positif"> <label> Positif </label>
+  <div class="form-inline padding-bottom">
+    <select ng-model="config.seuil.op" class="form-control">
+      <option value=">"> Superieur </option>
+      <option value="<"> Inferieur </option>
+    </select>
+    <input type="text" ng-model="config.seuil.value" class="form-control" placeholder="Valeur du seuil">
+  </div>
 
   <div class="form-group">
     <label ng-click="isCollapsed = !isCollapsed"> Paramètre Tableau
