--- a/client/widgets/lineChart/src/edit/edit.html
+++ b/client/widgets/lineChart/src/edit/edit.html
@@ -11,8 +11,10 @@
 <form role="form">
   <div class="form-group">
     <label for="sample">URL</label>
-    <input type="text" class="form-control" ng-model="config.url" placeholder="Enter url" uib-typeahead="address as address.url for address in getAutocompletion($viewValue)" typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
+    <input type="text" class="form-control" ng-model="config.url" placeholder="Enter url" uib-typeahead="address.url as address.url for address in getAutocompletion($viewValue)" typeahead-min-length='0' typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
   </div>
+
+  <input type="checkbox" ng-model="config.listener"> <label> Slave </label>
 
 
   <div>
