add css query directive

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,10 @@
     <!-- build:css css/sample.min.css -->
     <!-- Bootstrap core CSS -->
     <link href="components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link ng-if="main.black" href="css/app.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
+    <link ng-if="main.black" href="css/black.css" rel="stylesheet">
     <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/query.css" rel="stylesheet">
     <!-- dashboard style -->
     <link href="/components/angular-dashboard-framework/dist/angular-dashboard-framework.css" rel="stylesheet">
     <link href="/components/adf-widget-clock/dist/adf-widget-clock.min.css" rel="stylesheet">
@@ -101,11 +103,6 @@
 
     <!-- singleValue -->
     <script type="text/javascript" src="/widgets/singleValue/dist/adf-widget-singleValue.min.js"></script>
-    <!-- <script type="text/javascript" src="/widgets/singleValue/src/singleValue.widget.js"></script>
-    <script type="text/javascript" src="/widgets/singleValue/templates.tpl.js"></script>
-    <script type="text/javascript" src="/widgets/singleValue/src/singleValue.service.js"></script>
-    <script type="text/javascript" src="/widgets/singleValue/src/view/singleValue.controller.js"></script>
-    <script type="text/javascript" src="/widgets/singleValue/src/edit/singleValueEdit.controller.js"></script> -->
 
     <!-- pieChart -->
     <script type="text/javascript" src="/widgets/pieChart/dist/adf-widget-pieChart.min.js"></script>
@@ -119,6 +116,7 @@
     <!-- Check Standard -->
     <script type="text/javascript" src="/widgets/checkStandard/dist/adf-widget-checkStandard.js"></script>
 
+    <!-- paginateTable -->
     <script type="text/javascript" src="/widgets/paginateTable/dist/adf-widget-paginateTable.min.js"></script>
 
 
@@ -130,9 +128,6 @@
     <!-- Clock -->
     <script type="text/javascript" src="/components/moment/moment.js"></script>
     <script type="text/javascript" src="/components/adf-widget-clock/dist/adf-widget-clock.min.js"></script>
-
-    <!-- Table Json -->
-    <script type="text/javascript" src="components/adf-widget-table/dist/adf-widget-table.min.js"></script>
 
     <!-- WYSIWYG -->
     <script type="text/javascript" src="components/rangy/rangy-core.js"></script>
