--- a/client/widgets/lineChart/src/edit/edit.html
+++ b/client/widgets/lineChart/src/edit/edit.html
@@ -10,15 +10,16 @@
 
 <form role="form">
   <div class="form-group">
-    <label for="sample">URL</label>
-    <input type="text" class="form-control" ng-model="config.url" placeholder="Enter url" uib-typeahead="address.url as address.url for address in getAutocompletion($viewValue)" typeahead-min-length='0' typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
+    <label for="sample">Datasource</label>
+    <div ng-show="config.url" class="alert alert-info text-center"> {{config.url}} </div>
+    <selecttree model="config.dataSource"></selecttree>
   </div>
 
   <input type="checkbox" ng-model="config.listener"> <label> Slave </label>
 
 
   <div>
-    <label> Chart </label>
+    <label> Graph </label>
   </div>
 
   <div class="form-group">
@@ -32,7 +33,7 @@
 
   <div class="form-group">
     <label class="sr-only" for="label">Label</label>
-    <input type="text" id="label" class="form-control" ng-model="config.label" placeholder="Path of the Label">
+    <input type="text" id="label" class="form-control" ng-model="config.label" placeholder="Label" uib-typeahead="key for key in config.key" typeahead-min-length='0' autocomplete="off">
   </div>
 
   <div>
@@ -41,17 +42,17 @@
 
   <div class="form-group">
     <label class="sr-only" for="value">Value</label>
-    <input type="text" id="value" class="form-control" ng-model="config.value" placeholder="Path of the first value">
+    <input type="text" id="value" class="form-control" ng-model="config.value" placeholder="Première Donnée" uib-typeahead="key for key in config.key" typeahead-min-length='0'>
   </div>
 
   <div class="form-group">
     <label class="sr-only" for="value2">Value2</label>
-    <input type="text" id="value2" class="form-control" ng-model="config.value2" placeholder="Path of the Second value">
+    <input type="text" id="value2" class="form-control" ng-model="config.value2" placeholder="Seconde Donnée" uib-typeahead="key for key in config.key" typeahead-min-length='0'>
   </div>
 
 
   <div>
-    <label> Chart Type </label>
+    <label> Type du graph </label>
   </div>
 
   <div class="form-group">
