--- a/client/widgets/pieChart/src/edit/edit.html
+++ b/client/widgets/pieChart/src/edit/edit.html
@@ -10,17 +10,18 @@
 
 <form role="form">
   <div class="form-group">
-    <label for="sample">URL</label>
-    <input type="text" class="form-control" ng-model="config.url" placeholder="Enter url" uib-typeahead="address as address.url for address in getAutocompletion($viewValue)" typeahead-template-url="autocomplete.html" typeahead-loading="load" typeahead-no-result="noResults">
+    <label for="sample">Datasource</label>
+    <div ng-show="config.url" class="alert alert-info text-center"> {{config.url}} </div>
+    <selecttree model="config.datasource"></selecttree>
   </div>
 
   <div>
-    <label> Chart </label>
+    <label> Graph </label>
   </div>
 
   <div class="form-group">
     <label class="sr-only" for="desc">Description</label>
-    <input type="text" id="desc" class="form-control" ng-model="config.desc" placeholder="Enter Description of the data">
+    <input type="text" id="desc" class="form-control" ng-model="config.desc" placeholder="Description">
   </div>
 
   <div>
@@ -29,7 +30,7 @@
 
   <div class="form-group">
     <label class="sr-only" for="label">Label</label>
-    <input type="text" id="label" class="form-control" ng-model="config.label" placeholder="Path of the Label">
+    <input type="text" id="label" class="form-control" ng-model="config.label" placeholder="Label">
   </div>
 
   <div>
@@ -38,11 +39,11 @@
 
   <div class="form-group">
     <label class="sr-only" for="value">Value</label>
-    <input type="text" id="value" class="form-control" ng-model="config.value" placeholder="Path of the first value">
+    <input type="text" id="value" class="form-control" ng-model="config.value" placeholder="Données">
   </div>
 
   <div>
-    <label> Chart Type </label>
+    <label> Type de Graph </label>
   </div>
 
   <div class="form-group">
