--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <link ng-if="main.black" href="css/black.css" rel="stylesheet">
     <link href="css/carousel.css" rel="stylesheet">
     <link href="css/query.css" rel="stylesheet">
-
+    <link href="css/leftmenu.css" rel="stylesheet">
     <!-- dashboard style -->
     <link href="/components/angular-dashboard-framework/dist/angular-dashboard-framework.css" rel="stylesheet">
     <link href="/components/adf-widget-clock/dist/adf-widget-clock.min.css" rel="stylesheet">
@@ -54,7 +54,7 @@
   <body ng-controller="authenticationCtrl as auth">
 
     <div ng-include="'/templates/navigation.html'"></div>
-    <div ng-include="'/templates/cssMenu.html'"></div>
+    <div ng-include="'/templates/leftMenu.html'"></div>
 
     <div class="container">
 
