change widget edit

--- a/client/widgets/lineChart/src/edit/edit.html
+++ b/client/widgets/lineChart/src/edit/edit.html
@@ -72,7 +72,7 @@
   <div ng-show="expert">
     <div class="form-group">
       <label class="sr-only" for="database"> Database </label>
-      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database">
+      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database" uib-typeahead=" database for database in graph.getDatabase($viewValue)" typeahead-min-length='0'>
     </div>
     <div class="form-group">
       <label class="sr-only" for="query">Query</label>
