--- a/client/widgets/checkStandard/src/edit/edit.html
+++ b/client/widgets/checkStandard/src/edit/edit.html
@@ -15,7 +15,7 @@
 
   <div class="form-group">
     <label for="sample"> Datasources</label>
-    <input id="sample" type="text" class="form-control" ng-model="config.database" placeholder="Type du Check" autocomplete="off" uib-typeahead="database for database in cs.getDatabase($viewValue)" typeahead-min-length='0' ng-blur="cs.getColumns(config.database)">
+    <input id="sample" type="text" class="form-control" ng-model="config.databaseStandard" placeholder="Type du Check" autocomplete="off" uib-typeahead="database for database in cs.getDatabase($viewValue)" typeahead-min-length='0' typeahead-on-select="cs.getColumns(config.database)">
   </div>
 
   <div class="form-group">
@@ -73,13 +73,13 @@
   <!-- MODE EXPERT -->
 
   <div>
-    <input type="checkbox" ng-model="expert"> Expert Mode
+    <input id="cbe" type="checkbox" ng-model="expert"> <label for="cbe" > Expert Mode </label>
   </div>
 
   <div ng-show="expert">
     <div class="form-group">
       <label class="sr-only" for="database"> Database </label>
-      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database">
+      <input type="text" id="database" class="form-control" placeholder="Database" ng-model="config.database" uib-typeahead=" database for database in cs.getDatabaseExpert($viewValue)" typeahead-min-length='0'>
     </div>
     <div class="form-group">
       <label class="sr-only" for="query">Query</label>
